# openeog

./: +  .gitignore  .pre-commit-config.yaml  .rgignore  INSTALL.md  Makefile  README.md  justfile  pyproject.toml  requirements.txt  setup.py
bsp/: __init__.py  settings.py
bsp/adc/: __init__.py  acquirer.py  base.py  biosignalsplux.py  bitalino.py  synth.py
bsp/core/: __init__.py  calibration.py  denoising.py  differentiation.py  helpers.py  impulses.py  io.py  logging.py  models.py  reports.py  saccades.py  stimuli.py
bsp/core/biomarkers/: __init__.py  antisaccades.py  pursuits.py  utils.py
bsp/core/models/: __init__.py  conditions.py  enums.py  hardware.py  sessions.py  studies.py  tests.py
bsp/core/protocols/: __init__.py  antisaccades.py  base.py  pursuits.py  saccades.py
bsp/gui/: __init__.py  config.py  icons.py  mainwindow.py  plotter.py  protocols.py  recorder.py  resources.py  screens.py  settings.py  stimulator.py
bsp/gui/newrecord/: finishing.py  protocols.py  protocols_antisaccadic.py  protocols_pursuit.py  protocols_saccadic.py  wizard.py
bsp/gui/protocols/: __init__.py  antisaccades.py  dialogs.py  pursuits.py
data/: BSPEog-MIME.xml  BSPEog.desktop
install/: Makefile  install.sh  instructions.md
notebooks/: 0_Filtering.ipynb  1_Differentiation.ipynb  2_Impulses_Detection.ipynb  3_Calibration.ipynb  4_Saccade_Identification.ipynb  5_Smooth_Pursuit.ipynb  Antisaccades_Biomarkers.ipynb  Antisácada.eps  Biomarcadores de Persecución Suave.ipynb  Cálculo del Desfase de la Persecución Suave.ipynb  Detección_Microsácadas.eps  Detectando Eventos Antisacádicos con Biblioteca.ipynb  Detectando Eventos Antisacádicos.ipynb  PruebaBiomarcadores.ipynb  Pruebas.ipynb  TFG.ipynb  Umbra_Microsacada.eps  Umbral_MicroSácada.eps  Untitled.ipynb  notebook_antisacadas.ipynb  sucio_Antisaccades_Biomarkers.ipynb  sucio_notebook_antisacadas.ipynb
notebooks/data/: 20240420-nsi-persecucion.bsp  20240420-rbg-antisaccade.bsp  20240420-rbg-persecucion.bsp  prueba.bsp  prueba2.bsp  prueba_fixed.bsp  roberto.bsp  roberto.xlsx  rodolfo.bsp  rodolfo.xlsx  sandra.bsp  sandra.xlsx
notebooks/new/: Calibration.ipynb
openeog/: __init__.py  settings.py
openeog/adc/: __init__.py  bitalino.py  synth.py
openeog/core/: __init__.py  calibration.py  differentiation.py  io.py  logging.py  reports.py  saccades.py  stimuli.py
openeog/editor/: __init__.py
openeog/gui/: mainwindow.py  recorder.py  stimulator.py
openeog/recorder/: __init__.py
requirements/: base.txt  devel.txt
res/: editor.qrc  icons.qrc  resources.qrc
scripts/: ejemplo.py  extract_antisaccades_biomarkers.py  extract_pursuit_biomarkers.py  fix_july2024.py  fixing_timing.py
tests/: bitalino.py
(+40 files in other folders)
