[project]
name = "openeog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "pyserial>=3.5",
    "pyside6>=6.8.1",
    "pyside6-addons>=6.8.1",
    "pyside6-essentials>=6.8.1",
    "pyside6-stubs>=6.4.2.0",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "tablib[xlsx]>=3.7.0",
    "termcolor>=2.5.0",
]

[project.gui-scripts]
openeog-recorder = "openeog.recorder:main"
openeog-editor = "openeog.editor:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
select = ["E", "F"]
extend-select = ["T201"]
ignore = []

# fixable = ["A", "B", "C", "D", "E", "F", "..."]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
src = ["openeog"]
per-file-ignores = {}
line-length = 88
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py310"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv]
dev-dependencies = [
    "build>=1.2.2.post1",
    "ipython>=8.30.0",
    "jupyterlab>=4.3.1",
    "notebook>=7.0.7",
    "pre-commit>=4.0.1",
    "tqdm>=4.67.1",
]

[lint.per-file-ignores]
"**/resources.py" = ["E501"]
